[gd_scene load_steps=4 format=3 uid="uid://d2irhs80ktyb2"]

[ext_resource type="Script" uid="uid://bs434t7p3qp76" path="res://game/ui/event_window.gd" id="1_3vmef"]
[ext_resource type="Theme" uid="uid://chxgkda6ftdgb" path="res://assets/theme/commander_theme.tres" id="1_mhne5"]

[sub_resource type="LabelSettings" id="LabelSettings_3vmef"]
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 4

[node name="EventWindow" type="CanvasLayer"]
layer = 100
script = ExtResource("1_3vmef")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mhne5")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LblTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Title"
label_settings = SubResource("LabelSettings_3vmef")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ImgEvent" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TxtDescription" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "事件描述..."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
